This is mostly error free. You can use it.

--- a/src/main/resources/templates/student/student-course-resume.html
+++ b/src/main/resources/templates/student/student-course-resume.html
@@ -18,7 +18,7 @@
 						<div class="card">
 							<div class="row g-0">
 								<div class="col-md-3">
-									<img th:src="@{'/private/course/course-image-file/' + ${enrolledCourse.courses.courseImageFileName}}"
+									<img th:src="@{/public/assets/images/courses/4by3/01.jpg}"
 										class="rounded-2" alt="Card image">
 								</div>
 								<div class="col-md-9">
