--- a/src/main/resources/templates/admin/admin-sidebar.html
+++ b/src/main/resources/templates/admin/admin-sidebar.html
@@ -73,9 +73,9 @@
 
 						<li class="nav-item"><a class="nav-link" th:classappend="${content} == 'authenticated-user/forum' ? 'active' : ''"
 						th:href="@{/admin/forum}"><i class="fas fa-comments fa-fw me-2"></i>Forum</a></li>
-						<li class="nav-item"><a class="nav-link" th:classappend="${content} == 'admin/admin-certificate-design' ? 'active' : ''"
+						<!--  <li class="nav-item"><a class="nav-link" th:classappend="${content} == 'admin/admin-certificate-design' ? 'active' : ''"
 							th:href="@{/admin/admin-certificate-design}"><i
-								class="fas fa-certificate fa-fw me-2"></i>Certificates</a></li>
+								class="fas fa-certificate fa-fw me-2"></i>Certificates</a></li>-->
 						<!-- Menu item 7 -->
 						<li class="nav-item"><a class="nav-link" th:classappend="${content} == 'admin/admin-setting' ? 'active' : ''"
 							th:href="@{/admin/admin-setting}"><i
