--- a/src/main/resources/templates/student/student-view-allcourses.html
+++ b/src/main/resources/templates/student/student-view-allcourses.html
@@ -19,8 +19,8 @@
 
 					<!-- Top bar left -->
 					<div class="navbar-expand-lg ms-auto ms-xl-0">
-						<a th:href="@{/student/student-view-blog}" class="btn btn-primary">Back
-							To Blog</a>
+						<a th:href="@{/student/student-course-list}" class="btn btn-primary">Back
+							To Course List</a>
 					</div>
 					<!-- Top bar left END -->
 
