--- a/src/main/resources/templates/student/student-dashboard.html
+++ b/src/main/resources/templates/student/student-dashboard.html
@@ -139,9 +139,12 @@
 												class="btn btn-sm btn-success me-1 mb-1 mb-md-0 disabled">
 												<i class="bi bi-check me-1"></i>Complete
 											</button>
-										<!-- 	<a href="#" class="btn btn-sm btn-light me-1"> <i
-												class="bi bi-arrow-repeat me-1"></i>Restart
-											</a>-->
+											<a
+												th:href="@{/student/student-course-resume}"
+												class="btn btn-sm btn-light me-1"><i
+												class="bi bi-arrow-repeat me-1"></i>Revision
+											</a>
+										
 										</div> <!-- Check if total enrolled modules is less than completed modules -->
 										<div
 											th:if="${#lists.size(enrolledCourse.enrolledModules) > #lists.size(enrolledCourse.enrolledModules.?[completeStatus == true])}">
