--- a/src/main/resources/templates/student/student-grade.html
+++ b/src/main/resources/templates/student/student-grade.html
@@ -19,10 +19,10 @@
 					<div class="card-body">
 
 						<!-- Search and select START -->
-						<div
+					  <div
 							class="row g-3 align-items-center justify-content-between mb-4">
 							<!-- Search -->
-							<div class="col-md-12">
+						<!--	<div class="col-md-12">
 								<form class="rounded position-relative">
 									<input class="form-control pe-5 bg-transparent" type="search"
 										placeholder="Search" aria-label="Search">
@@ -32,7 +32,7 @@
 										<i class="fas fa-search fs-6 "></i>
 									</button>
 								</form>
-							</div>
+							</div> -->	
 
 							<!-- Select option -->
 							<div class="col-md-3">
