--- a/src/main/resources/templates/user/layout.html
+++ b/src/main/resources/templates/user/layout.html
@@ -3,7 +3,7 @@
 	xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity6">
 <head>
     <meta charset="UTF-8">
-    <title>Layout</title>
+    <title>DAT Growth Hub</title>
     <!-- Stylesheets -->
     <th:block th:replace="fragments/stylesheets :: stylesheets"></th:block>
 
