--- a/src/main/resources/templates/authenticated-user/edit-course-detail.html
+++ b/src/main/resources/templates/authenticated-user/edit-course-detail.html
@@ -67,9 +67,9 @@
 												</div>
 												<div class="ms-sm-3 mt-2 mt-sm-0">
 													<h6 class="mb-0">
-														<a href="#" th:text="${user.name}"></a>
+														<a href="#" th:text="${course.users.name}"></a>
 													</h6>
-													<p class="mb-0 small" th:text="${user.division}"></p>
+													<p class="mb-0 small" th:text="${course.users.division}"></p>
 												</div>
 											</div>
 										</div>
